# AVOE

./: .gitignore  CMakeLists.txt  README.md
core/: .gitignore  README.md  build.sh  clock.h  config.h  connections.h  control.h  controller.h  io.cpp  io.h  lib.h  log.cpp  log.h  main.cpp  mission.cpp  mission.h  motor.cpp  motor.h  motors.h  network.h  sensor.cpp  sensor.h  sensors.h  tasks.h  types.h  vehicle.cpp  vehicle.h  vehicle_setup.h
core/general-sensor/: README.md  imu.cpp  imu.h  pressure.h
core/skeletons/: README.md  tardigrade.h
docs/: README.md  tardigrade.md
frontends/: README.md
frontends/cli/: .gitignore  .main.cpp.swp  .sensor.cpp.swp  README.md  build.sh  config.h  main.cpp  sensor-test  sensor.cpp  sensor.h  sensor_test.cpp  setup.h
lib/: .clock.cpp.swp  .lib.cpp.swp  .lib.h.swp  .network.h.swp  CMakeLists.txt  Makefile  clock.cpp  clock.h  cmake_install.cmake  controller.h  globals.h  keyboard.h  lib.cpp  lib.h  network.cpp  network.h  vt100.h
plugins/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
plugins/controllers/: README.md
plugins/drivers/: README.md
plugins/drivers/sensors/sonar_dummy/: CMakeLists.txt  main.cpp  readme.md  runprogram.sh
plugins/gamepad_maps/: README.md  f710.h  sixaxis.h
plugins/math/: README.md
plugins/middleware/: README.md
plugins/mission_control/: README.md
plugins/sensors/: README.md
tests/: README.md
tests/io_test/: .gitignore  build.sh  io_rx_test  main.cpp
tests/log_t_test/: a.out  build.sh  log_t_test.cpp
tests/network_test/: .gitignore  build.sh  network_test_rx.cpp  (+1 more)
(+102 files in other folders)
